--- a/web/index.html
+++ b/web/index.html
@@ -18,14 +18,25 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-6">
+                    <ul id="chat" class="list-unstyled">
+                    </ul>
                 </div>
                 <div class="col-md-6">
                     <h2>Hello</h2>
+                    <form id="message">
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="name" placeholder="Name">
+                            <input type="text" class="form-control" id="text" placeholder="Message…">
+                        </div>
+                        <button type="submit" class="btn btn-default">Send</button>
+                    </form>
                 </div>
             </div>
         </div>
 
         <script src="/vendor/jquery/jquery.min.js"></script>
         <script src="/vendor/bootstrap/bootstrap.min.js"></script>
+        <script src="/vendor/socket.io/socket.io-1.3.5.js"></script>
+        <script src="/scripts/client.js"></script>
     </body>
 </html>
