--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Bienen</title>
 
-        <link href="/vendor/bootstrap/bootstrap.min.css" rel="stylesheet">
+        <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
@@ -22,20 +22,47 @@
                     </ul>
                 </div>
                 <div class="col-md-6">
-                    <h2>Hello</h2>
-                    <form id="message">
-                        <div class="form-group">
-                            <input type="text" class="form-control" id="name" placeholder="Name">
-                            <input type="text" class="form-control" id="text" placeholder="Message…">
+                    <div id="register" class="col-md-10 col-md-offset-1">
+                        <h1>Hallo</h1>
+                        <div class="panel panel-default">
+                            <div class="panel-heading">
+                                <h2 class="panel-title">Anmelden</h2>
+                            </div>
+                            <div class="panel-body">
+                                <form class="register">
+                                    <input type="hidden" name="color" value="#edd400" />
+
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" id="name" name="name" placeholder="Dein Name" required="required" />
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="btn-group" role="group">
+                                            <button type="button" class="btn btn-default color" data-color="#FFFF30" style="color: #FFFF30;"><span class="glyphicon glyphicon-stop"></span></button>
+                                            <button type="button" class="btn btn-default color" data-color="#FB8D2D" style="color: #FB8D2D;"><span class="glyphicon glyphicon-stop"></span></button>
+                                            <button type="button" class="btn btn-default color" data-color="#F62A37" style="color: #F62A37;"><span class="glyphicon glyphicon-stop"></span></button>
+                                            <button type="button" class="btn btn-default color" data-color="#F1279F" style="color: #F1279F;"><span class="glyphicon glyphicon-stop"></span></button>
+                                            <button type="button" class="btn btn-default color" data-color="#D225EB" style="color: #D225EB;"><span class="glyphicon glyphicon-stop"></span></button>
+                                            <button type="button" class="btn btn-default color" data-color="#6523E5" style="color: #6523E5;"><span class="glyphicon glyphicon-stop"></span></button>
+                                            <button type="button" class="btn btn-default color" data-color="#2246DF" style="color: #2246DF;"><span class="glyphicon glyphicon-stop"></span></button>
+                                            <button type="button" class="btn btn-default color" data-color="#24A4D5" style="color: #24A4D5;"><span class="glyphicon glyphicon-stop"></span></button>
+                                            <button type="button" class="btn btn-default color" data-color="#28C9A0" style="color: #28C9A0;"><span class="glyphicon glyphicon-stop"></span></button>
+                                            <button type="button" class="btn btn-default color" data-color="#2CBE4B" style="color: #2CBE4B;"><span class="glyphicon glyphicon-stop"></span></button>
+                                        </div>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary">Anmelden</button>
+                                </form>
+                            </div>
                         </div>
-                        <button type="submit" class="btn btn-default">Send</button>
-                    </form>
+                    </div>
+                    <div id="code" class="hidden">
+                        <h1>Dein Programm</h1>
+                    </div>
                 </div>
             </div>
         </div>
 
         <script src="/vendor/jquery/jquery.min.js"></script>
-        <script src="/vendor/bootstrap/bootstrap.min.js"></script>
+        <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
         <script src="/vendor/socket.io/socket.io-1.3.5.js"></script>
         <script src="/scripts/client.js"></script>
     </body>
