Drag and drop programming

--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,7 @@
         <title>Bienen</title>
 
         <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/styles/bienen.css" rel="stylesheet">
 
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
@@ -56,12 +57,54 @@
                     </div>
                     <div id="code" class="hidden">
                         <h1>Dein Programm</h1>
+                        <div class="col-md-6">
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>Status</th>
+                                        <th>Aktion</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Frei</td>
+                                        <td><div class="slot" data-type="free"></div></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Wand</td>
+                                        <td><div class="slot" data-type="wall"></div></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Ecke</td>
+                                        <td><div class="slot" data-type="edge"></div></td>
+                                    </tr>
+                                    <tr>
+                                        <td>Biene</td>
+                                        <td><div class="slot" data-type="contact"></div></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="slot">
+                                <a class="card btn btn-default" data-type="fly">
+                                    <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
+                                </a>
+                                <a class="card btn btn-default" data-type="clockwise">
+                                    <span class="glyphicon glyphicon-repeat" aria-hidden="true"></span>
+                                </a>
+                                <a class="card btn btn-default" data-type="stop">
+                                    <span class="glyphicon glyphicon-stop" aria-hidden="true"></span>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
 
         <script src="/vendor/jquery/jquery.min.js"></script>
+        <script src="/vendor/jquery-ui/jquery-ui.min.js"></script>
         <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
         <script src="/vendor/socket.io/socket.io-1.3.5.js"></script>
         <script src="/scripts/client.js"></script>
