Pass program to server

--- a/web/index.html
+++ b/web/index.html
@@ -58,7 +58,7 @@
                     <div id="code" class="hidden">
                         <h1>Dein Programm</h1>
                         <div class="col-md-6">
-                            <table class="table table-striped">
+                            <table class="table table-striped program">
                                 <thead>
                                     <tr>
                                         <th>Status</th>
