--- a/web/index.html
+++ b/web/index.html
@@ -20,6 +20,8 @@
             <div class="row">
                 <div class="col-md-6">
                     <ul id="chat" class="list-unstyled">
+                        <div id="canvas">
+                        </div>
                     </ul>
                 </div>
                 <div class="col-md-6">
@@ -27,7 +29,7 @@
                         <h1>Hallo</h1>
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <h2 class="panel-title">Anmelden</h2>
+                                <h2 class="panel-title">Deine Daten</h2>
                             </div>
                             <div class="panel-body">
                                 <form class="register">
@@ -50,7 +52,7 @@
                                             <button type="button" class="btn btn-default color" data-color="#2CBE4B" style="color: #2CBE4B;"><span class="glyphicon glyphicon-stop"></span></button>
                                         </div>
                                     </div>
-                                    <button type="submit" class="btn btn-primary">Anmelden</button>
+                                    <button type="submit" class="btn btn-primary">Start!</button>
                                 </form>
                             </div>
                         </div>
@@ -107,6 +109,8 @@
         <script src="/vendor/jquery-ui/jquery-ui.min.js"></script>
         <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
         <script src="/vendor/socket.io/socket.io-1.3.5.js"></script>
+        <script src="/vendor/raphaeljs/raphael-min.js"></script>
+        <script src="/vendor/raphaeljs/raphael-svg-import.min.js"></script>
         <script src="/scripts/client.js"></script>
     </body>
 </html>
