--- a/web/index.html
+++ b/web/index.html
@@ -111,6 +111,7 @@
         <script src="/vendor/socket.io/socket.io-1.3.5.js"></script>
         <script src="/vendor/raphaeljs/raphael-min.js"></script>
         <script src="/vendor/raphaeljs/raphael-svg-import.min.js"></script>
+        <script src="/scripts/bee.js"></script>
         <script src="/scripts/client.js"></script>
     </body>
 </html>
