Improved color handling

--- a/web/index.html
+++ b/web/index.html
@@ -33,14 +33,14 @@
                             </div>
                             <div class="panel-body">
                                 <form class="register">
-                                    <input type="hidden" name="color" value="#edd400" />
+                                    <input type="hidden" name="color" value="#FFFF30" />
 
                                     <div class="form-group">
                                         <input type="text" class="form-control" id="name" name="name" placeholder="Dein Name" required="required" />
                                     </div>
                                     <div class="form-group">
                                         <div class="btn-group" role="group">
-                                            <button type="button" class="btn btn-default color" data-color="#FFFF30" style="color: #FFFF30;"><span class="glyphicon glyphicon-stop"></span></button>
+                                            <button type="button" class="btn btn-default color active" data-color="#FFFF30" style="color: #FFFF30;"><span class="glyphicon glyphicon-stop"></span></button>
                                             <button type="button" class="btn btn-default color" data-color="#FB8D2D" style="color: #FB8D2D;"><span class="glyphicon glyphicon-stop"></span></button>
                                             <button type="button" class="btn btn-default color" data-color="#F62A37" style="color: #F62A37;"><span class="glyphicon glyphicon-stop"></span></button>
                                             <button type="button" class="btn btn-default color" data-color="#F1279F" style="color: #F1279F;"><span class="glyphicon glyphicon-stop"></span></button>
