--- a/web/index.html
+++ b/web/index.html
@@ -58,7 +58,7 @@
                     <div id="code" class="hidden">
                         <h1>Dein Programm</h1>
                         <div class="col-md-6">
-                            <ul class="program list-unstyled">
+                            <ul id="program" class="program list-unstyled">
                             </ul>
                         </div>
                         <div class="col-md-6">
