Define and render level basics

--- a/web/index.html
+++ b/web/index.html
@@ -84,6 +84,7 @@
         <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
         <script src="/vendor/raphaeljs/raphael-min.js"></script>
         <script src="/scripts/bee.js"></script>
+        <script src="/scripts/level.js"></script>
         <script src="/scripts/field.js"></script>
         <script src="/scripts/client.js"></script>
     </body>
