Start to move bee
Misses collision checks and animation offset is broken

--- a/web/index.html
+++ b/web/index.html
@@ -60,6 +60,7 @@
                         <div class="col-md-6">
                             <ul id="program" class="program list-unstyled">
                             </ul>
+                            <button id="start" type="button" class="btn btn-default" >Start</button>
                         </div>
                         <div class="col-md-6">
                             <ul class="program list-unstyled">
