--- a/web/index.html
+++ b/web/index.html
@@ -56,13 +56,13 @@
                         </div>
                     </div>
                     <div id="code" class="hidden">
-                        <h1>Dein Programm</h1>
                         <div class="col-md-6">
+                            <h3>Dein Programm</h3>
                             <ul id="program" class="program list-unstyled">
                             </ul>
                             <div class="row">
                                 <div class="col-md-6">
-                                    <button id="start" type="button" class="btn btn-default" >Neu</button>
+                                    <button id="reset" type="button" class="btn btn-default" >Neu</button>
                                 </div>
                                 <div class="col-md-6">
                                     <button id="start" type="button" class="btn btn-primary" >Start</button>
